# vegetation-intelligence-platform

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yml  skills-lock.json
.evidence/: README.md  manifest.csv
.evidence/active/: 20260622-1700-植被指数智能分析平台.md  20260623-1012-LangChain智能体打磨.md  20260623-1026-PostgreSQL自定义指数持久化.md  20260623-1035-任务书覆盖完善.md  20260623-1039-agent设计技能检索与安装.md  20260623-1050-agent会话与展示完善.md  (+21 more)
.playwright-cli/: package-lock.json  page-2026-07-02T02-29-42-610Z.yml
.serena/: project.yml
backend/: Dockerfile  Dockerfile.gpu  pyproject.toml
backend/app/: __init__.py  celery_app.py  main.py  nacos_bridge.py  pygeoapi_processor.py  settings.py  worker_tasks.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: indices.py
backend/app/engines/: base.py  joblib_engine.py  numpy_engine.py  torch_engine.py
backend/app/services/: advanced_analysis.py  agent.py  agent_knowledge_store.py  agent_session_store.py  agent_tools.py  assets.py  custom_index_store.py  jobs.py  nacos.py  planner.py  pygeoapi_runtime.py  raster_pipeline.py  tiles.py
backend/scripts/: benchmark.py  start_pygeoapi.py
backend/tests/: conftest.py  test_advanced_analysis.py  test_agent.py  test_api.py  test_assets.py  test_indices.py  test_raster_pipeline.py
docx/: build_handbook.py  build_result_layer_manual.py  实习报告封面.docx  已开发服务(3).docx  植被指数提取算法封装与Web服务实现实习任务书.docx  植被指数智能分析平台源代码与实现主手册.docx  结果图层缩放与浏览用户手册.docx
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
(+115 files in other folders)
